[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/beginning.gd" type="Script" id=1]
[ext_resource path="res://fonts/Lilliput Steps.otf" type="DynamicFontData" id=2]
[ext_resource path="res://audio/keyboard.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("anim:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fadeToBlack"
tracks/0/type = "value"
tracks/0/path = NodePath("anim:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Dialogue" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1924.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 617.0
margin_top = 445.0
margin_right = 1314.0
margin_bottom = 621.0
custom_fonts/font = SubResource( 1 )
align = 1
autowrap = true

[node name="next_char" type="Timer" parent="."]

[node name="next_message" type="Timer" parent="."]

[node name="keyboard" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fadeToBlack = SubResource( 3 )

[node name="anim" type="ColorRect" parent="."]
margin_right = 1924.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 0 )

[connection signal="ready" from="." to="." method="_on_Dialogue_ready"]
[connection signal="timeout" from="next_char" to="." method="_on_next_char_timeout"]
[connection signal="timeout" from="next_message" to="." method="_on_next_message_timeout"]
